--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment-timezone": "^0.5.34",
     "mongoose": "^6.4.0",
+    "multer": "^1.4.5-lts.1",
     "redis": "^4.1.0",
     "request": "^2.88.2",
     "socket.io": "^3.1.1",
