--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validation": "^4.1.0",
+    "http-errors": "^2.0.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "moment-timezone": "^0.5.34",
@@ -25,7 +26,7 @@
     "multer": "^1.4.5-lts.1",
     "redis": "^4.1.0",
     "request": "^2.88.2",
-    "socket.io": "^3.1.1",
+    "socket.io": "^4.5.1",
     "unirest": "^0.6.0"
   },
   "devDependencies": {
