--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "http-errors": "^2.0.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "moment-timezone": "^0.5.34",
     "mongoose": "^6.4.0",
     "mongoose-geojson-schema": "^2.2.2",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.1",
+    "node-schedule": "^2.1.0",
+    "nodemailer": "^6.7.7",
     "redis": "^4.1.0",
     "request": "^2.88.2",
     "socket.io": "^4.5.1",
