mixpanel implementation on ad routes

--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
   "author": "Damien Arrachequesne <damien.arrachequesne@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@sentry/browser": "^7.14.1",
     "@sentry/node": "^7.3.1",
-    "@sentry/tracing": "^7.3.1",
+    "@sentry/tracing": "^7.14.1",
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validation": "^4.1.0",
+    "googleapis": "^108.0.0",
     "http-errors": "^2.0.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "mixpanel": "^0.17.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.34",
     "mongoose": "^6.4.0",
