--- a/package.json
+++ b/package.json
@@ -24,12 +24,10 @@
     "jsonwebtoken": "^8.5.1",
     "mixpanel": "^0.17.0",
     "moment": "^2.29.4",
-    "moment-timezone": "^0.5.34",
     "mongoose": "^6.4.0",
     "mongoose-geojson-schema": "^2.2.2",
     "node-cron": "^3.0.1",
-    "request": "^2.88.2",
-    "unirest": "^0.6.0"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
