--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^6.4.0",
     "mongoose-geojson-schema": "^2.2.2",
     "node-cron": "^3.0.1",
+    "nodemailer": "^6.8.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
