--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.6.0",
     "express-validation": "^4.1.0",
     "googleapis": "^108.0.0",
     "http-errors": "^2.0.0",
