--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.0",
     "mixpanel": "^0.17.0",
     "moment": "^2.29.4",
+    "mongodb": "^4.13.0",
     "mongoose": "^6.4.0",
     "mongoose-geojson-schema": "^2.2.2",
     "node-cron": "^3.0.1",
