--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@tensorflow-models/mobilenet": "^2.1.0",
+    "@tensorflow/tfjs": "^4.2.0",
+    "@tensorflow/tfjs-node": "^4.2.0",
     "axios": "^0.27.2",
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
