--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@google-cloud/vision": "^3.1.0",
     "axios": "^1.2.2",
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
@@ -17,6 +18,7 @@
     "express": "^4.18.1",
     "express-rate-limit": "^6.7.0",
     "express-validation": "^4.1.0",
+    "firebase": "^9.15.0",
     "googleapis": "^108.0.0",
     "http-errors": "^2.0.0",
     "joi": "^17.6.0",
