--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-rate-limit": "^6.7.0",
     "express-validation": "^4.1.0",
     "firebase": "^9.15.0",
+    "firebase-admin": "^11.5.0",
     "googleapis": "^108.0.0",
     "http-errors": "^2.0.0",
     "joi": "^17.6.0",
@@ -29,7 +30,10 @@
     "mongoose": "^6.4.0",
     "mongoose-geojson-schema": "^2.2.2",
     "node-cron": "^3.0.1",
-    "nodemailer": "^6.8.0"
+    "nodemailer": "^6.8.0",
+    "request": "^2.88.2",
+    "request-promise-native": "^1.0.9",
+    "sharp": "^0.31.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
