--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose-geojson-schema": "^2.2.2",
     "node-cron": "^3.0.1",
     "nodemailer": "^6.8.0",
+    "razorpay": "^2.8.4",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.9",
     "sharp": "^0.31.3"
