--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "pm2 start --no-daemon index.js",
     "dev": "nodemon index.js"
   },
   "license": "MIT",
@@ -28,6 +28,7 @@
     "mongoose": "^6.4.0",
     "node-cron": "^3.0.1",
     "nodemailer": "^6.8.0",
+    "pm2": "^5.2.2",
     "razorpay": "^2.8.4",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.9",
