--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start --no-daemon index.js",
+    "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "license": "MIT",
