--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "razorpay": "^2.8.4",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.9",
-    "sharp": "^0.31.3"
+    "sharp": "^0.31.3",
+    "translate-google": "^1.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
