--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "request": "^2.88.2",
     "request-promise-native": "^1.0.9",
     "sharp": "^0.31.3",
-    "translate-google": "^1.5.0"
+    "translate-google": "^1.5.0",
+    "trim": "^1.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
