--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-rate-limit": "^6.7.0",
     "firebase": "^9.15.0",
     "firebase-admin": "^11.5.0",
+    "firebase-dynamic-links": "^1.2.0",
     "http-errors": "^2.0.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^9.0.0",
