--- a/.github/workflows/prod_truelist.yml
+++ b/.github/workflows/prod_truelist.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - Truelist
+name: Build and deploy Node.js app to Azure Web App - HotDeals
 
 on:
   push:
@@ -50,7 +50,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'Truelist'
+          app-name: 'HotDeals'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_C47B23431113408DB15F9633B06BFEFB }}
           package: .
